--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,10 +4,12 @@ version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: ">=2.18.0 <3.0.0"
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  heimdall:
+    path: "../heimdall"
+  # path: ^1.8.0
 
 dev_dependencies:
   lints: ^2.0.0
